fixed message width and alignment

--- a/src/Components/Message.css
+++ b/src/Components/Message.css
@@ -1,3 +1,7 @@
+.MessagesContainer {
+    display: grid;
+}
+
 .MessageCont {
     padding: 4px;
     margin: 10px;
@@ -17,21 +21,26 @@
     color: #ffffff;
     background: linear-gradient(to top right, #00c6ff, #0072ff);
     border-radius: 15px 15px 0px 15px;
-    text-align: right;
     padding: 10px;
 }
 
 .Recieved {
     background: #d8d8d8;
     border-radius: 15px 15px 15px 0px;
-    text-align: left;
     padding: 10px;
 }
 
 .Left {
     text-align: left;
+    justify-self: left;
 }
 
 .Right {
-    text-align: right;
+    text-align: left;
+    justify-self: right;
+}
+
+
+li {
+    max-width: 80%
 }
